--- a/src/scss/banner.scss
+++ b/src/scss/banner.scss
@@ -15,7 +15,7 @@
   position: relative;
   z-index: 1;
   flex-direction: column;
-  background-color: #ffd51d;
+
 
 
   .container {
@@ -30,31 +30,48 @@
     grid-template-columns: 1fr 1fr;
 
     @include md {
-      grid-template-columns: 1fr;
+      display: flex;
+      flex-direction: column-reverse;
+
+
     }
 
     .banner_info {
       display: flex;
       flex-direction: column;
-      row-gap: 15px;
+      row-gap: 20px;
+
+      @include mobile {
+        display: flex;
+        flex-direction: column;
+        row-gap: 15px;
+        max-width: 300px;
+      }
+
       .heading {
         h1 {
           color: #000;
-          font-size: 57px;
+          font-size: clamp(10%, 8vw, 57px);
           font-style: normal;
           font-weight: 400;
           line-height: 63px;
           margin-top: 0;
           position: relative;
           z-index: 5;
-          padding-right: 20px;
           font-family: "Zen_Dots";
 
+          /* max-width: 400px; */
+          @include mobile {
+            line-height: normal;
+          }
         }
       }
 
       .banner_des {
 
+        margin-top: 20px;
+        margin-bottom: 25px;
+        max-width: 650px;
 
         p {
           color: #000;
@@ -64,6 +81,10 @@
           font-style: normal;
           font-weight: 400;
           line-height: normal;
+
+          @include md {
+            text-align: center;
+          }
         }
       }
 
@@ -72,6 +93,12 @@
         display: flex;
         align-items: center;
         justify-content: start;
+        gap: 20px;
+
+        @include md {
+          justify-content: center;
+          gap: 20px;
+        }
 
         a {
           background: linear-gradient(to left, #10C71A, #1EEE2E) padding-box, linear-gradient(to top, #48f045, #2cd22c) border-box;
@@ -83,11 +110,66 @@
             font-family: "Zen_Dots";
             font-size: 18px;
             font-style: normal;
-            padding: 13px 70px 13px 33px;
+            padding: 13px 33px 13px 33px;
             background: transparent;
             border: 3px solid transparent;
             display: inline-block;
             position: relative;
+            /* display: flex; */
+            /* align-items: center; */
+            /* justify-content: center; */
+            display: flex;
+            gap: 20px;
+            width: 100%;
+            max-width: 500px;
+
+            b {
+              color: #000;
+              font-family: "Zen_Dots";
+              font-size: 18px;
+              gap: 20px;
+              width: 100%;
+
+              @include mobile {
+                font-size: 15px;
+
+              }
+            }
+
+            @include mobile {
+              font-size: 12px;
+              gap: 10px;
+              padding: 12px 25px 12px 25px;
+            }
+          }
+
+        }
+
+        .btn_2 {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          gap: 8px;
+
+          span {
+            margin: auto;
+            color: #000;
+            text-align: center;
+            font-family: "Zen_Dots";
+            font-size: 18px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+            cursor: pointer;
+
+            @include md {
+              display: none;
+            }
+          }
+
+          img {
+            width: 100%;
+            max-width: 50px;
           }
         }
       }
@@ -95,7 +177,37 @@
       .contract_address_btn {
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: start;
+
+        @include mobile {
+          flex-direction: column;
+          row-gap: 8px;
+          align-items: center;
+          justify-content: center;
+        }
+
+        .address_heading {
+          color: #000;
+          font-weight: 400;
+          font-family: "Zen_Dots";
+          font-style: normal;
+          margin-top: 0;
+        }
+
+        span {
+          color: #000;
+          font-size: 12px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: normal;
+          margin: 0;
+          margin-left: 3px;
+          margin-right: 3px;
+        }
+
+        .copy_icon {
+          cursor: pointer;
+        }
       }
 
       .company_links {
@@ -107,6 +219,10 @@
         a {
           img {
             max-width: 170px;
+
+            @include mobile {
+              max-width: 92px;
+            }
           }
         }
       }
