--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -30,13 +30,16 @@
 
       .heading {
         h1 {
-          font-size: 70px;
-          color: #333333;
+          color: #000;
+          font-weight: 400;
+          line-height: 80px;
           font-family: "Zen_Dots";
-
-          text-align: center;
-          max-width: 800px;
-          text-transform: capitalize;
+          font-style: normal;
+          margin-top: 0;
+          line-height: 50px;
+          max-width: 483px;
+          font-size: 40px;
+          position: relative;
         }
       }
 
@@ -48,18 +51,65 @@
         gap: 40px;
 
         p {
-          color: white;
-          font-size: 24px;
-          font-family: 'Poppins', sans-serif;
-
-
-          font-weight: 700;
-          letter-spacing: 4.2px;
-          line-height: 42.4px;
+          color: #000;
+          font-family: "Poppins";
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: normal;
+          margin-top: 25px;
+          margin-bottom: 25px;
 
           @include md {
             letter-spacing: 1.2px;
           }
+        }
+      }
+
+      .about_btn{
+        a {
+        
+
+          button {
+            color: #000;
+            font-family: "Zen_Dots";
+            font-size: 18px;
+            font-style: normal;
+            padding: 13px 33px 13px 33px;
+            background: transparent;
+            border: 3px solid transparent;
+            display: inline-block;
+            position: relative;
+            /* display: flex; */
+            /* align-items: center; */
+            /* justify-content: center; */
+            display: flex;
+            gap: 20px;
+            width: 100%;
+            max-width: 500px;
+            background: linear-gradient(to left, #10C71A, #1EEE2E) padding-box, linear-gradient(to top, #48f045, #2cd22c) border-box;
+            text-decoration: none;
+            border-radius: 34px;
+            b {
+              color: #000;
+              font-family: "Zen_Dots";
+              font-size: 18px;
+              gap: 20px;
+              width: 100%;
+
+              @include mobile {
+                font-size: 15px;
+
+              }
+            }
+
+            @include mobile {
+              font-size: 12px;
+              gap: 10px;
+              padding: 12px 25px 12px 25px;
+            }
+          }
+
         }
       }
     }
@@ -99,12 +149,14 @@
       flex-direction: column;
       row-gap: 15px;
 
-      input {
-        input[type="date" i] {
-
-          display: none;
-        }
-      }
+ 
     }
   }
 }
+
+// input {
+//   input[type="date" i] {
+
+//     display: none;
+//   }
+// }
