--- a/src/scss/abouttwo.scss
+++ b/src/scss/abouttwo.scss
@@ -1,165 +1,121 @@
 @import "./variable.scss";
 @import "./media.scss";
 
-@font-face {
-  font-family: "DEADLY";
-  src: url("./font/DEADLY\ KILLERS.ttf");
-  font-style: normal;
-  font-weight: normal;
-}
-@font-face {
-  font-family: "Barlow", system-ui;
-  src: url("./font/Demo_Fonts/Fontspring-DEMO-rocgrotesk-medium.otf");
-  font-style: normal;
-  font-weight: normal;
-}
 
-#abouttwo {
+
+#aboutTwo {
   padding: 120px 15px 150px;
-  background: black;
   position: relative;
   z-index: 3;
-  > .container {
-    display: flex;
-    align-items: center;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    /* height: 100%; */
-    gap: 1rem;
-    /* padding-bottom: 30px; */
-    > .heading {
-      width: 100%;
-      margin: 0 auto;
-      padding: 20px 0px 60px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      > h1 {
-        line-height: 100%;
-        font-weight: 100;
-        width: 90%;
-        line-height: 118%;
-        text-transform: capitalize;
-        text-align: center;
-        font-size: clamp(2.6rem, 8vw, 70px);
-        color: #fff;
-        font-family: fangsong;
-        font-family: "Letric";
-        text-shadow: 2px 2px #0a0807;
-        margin-bottom: 100px;
-        /* margin-top: -30px; */
-        /* margin: 0 auto 70px; */
-        line-height: 1.4;
-        @include md {
-          width: 100%;
-        }
-        > span {
-          /* font-family: "Montserrat", sans-serif !important; */
-          font-weight: 700;
-        }
-      }
+
+  >.container {
+    max-width: 1200px;
+    margin: auto;
+    padding: 90px 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 53px;
+
+    @include md {
+      grid-template-columns: 1fr;
     }
-    .heading__two {
+
+    .info_left {
       display: flex;
       align-items: center;
       justify-content: center;
-      z-index: 6;
-      color: white;
+      max-width: 590px;
+      background: linear-gradient(to left, #10C71A, #1EEE2E) padding-box, linear-gradient(to top, #48f045, #2cd22c) border-box;
+      border-radius: 34px;
+      border: 3px solid transparent;
+      padding: 80px 63px 49px 75px;
       position: relative;
-      h1 {
-        line-height: 100%;
-        font-weight: 100;
-        line-height: 118%;
-        text-transform: uppercase;
+      overflow: hidden;
+
+      p {
+        color: #000;
         text-align: center;
-        font-size: clamp(2.2rem, 7vw, 3.2rem);
-        color: #fff;
-        font-family: "Letric";
-        text-shadow: 2px 2px #0a0807;
-        padding: 0px 15px;
+        font-family: "Zen_Dots";
+        font-size: 34px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 41px;
       }
     }
-    .content {
-      display: flex;
-      flex-direction: column;
-      gap: 1.2rem;
-      ul {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        margin: auto;
-        z-index: 111;
-        color: white;
-        position: relative;
-        padding: 10px 20px;
-        gap: 1rem;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-wrap: wrap;
-        li {
-          cursor: pointer;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          padding: 15px 20px;
-          opacity: 0.5;
-          font-size: 1.5rem;
 
-          span {
-            font-family: "Letric";
-            font-weight: 100;
-            i {
-              font-weight: 300;
-            }
-          }
-        }
-        li:nth-child(1) {
-          border-bottom: 1px solid #e64e44;
-          span {
-            color: #e64e44;
-          }
-        }
-        li:nth-child(2) {
-          border-bottom: 1px solid #2421e1;
-          span {
-            color: #2421e1;
-          }
-        }
-        li:nth-child(4) {
-          border-bottom: 1px solid #b41717;
-          span {
-            color: #b41717;
-          }
-        }
-        li:nth-child(3) {
-          border-bottom: 1px solid #58da6a;
-          span {
-            color: #58da6a;
-          }
-        }
-
-        li.active {
-          opacity: 1;
-          span {
-          }
+    .info_right {
+      .des {
+        p {
+          color: #000;
+          font-family: "Poppins";
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 26px;
+          margin-bottom: 0;
         }
       }
-      .para {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        p {
-          padding: 20px 15px;
-          text-align: center;
-          z-index: 111;
-          position: relative;
-          color: white;
-          max-width: 550px;
-          line-height: 1.5;
-          font-size: 18px;
+
+      .img_box {
+        img {
+          width: 100%;
+          max-width: 90px;
         }
       }
     }
   }
+
+  .aboutTwo_btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    a {
+
+
+      button {
+        color: white;
+        font-family: "Zen_Dots";
+        font-size: 18px;
+        font-style: normal;
+        padding: 13px 33px 13px 33px;
+        background: transparent;
+        border: 3px solid transparent;
+        display: inline-block;
+        position: relative;
+        /* display: flex; */
+        /* align-items: center; */
+        /* justify-content: center; */
+        display: flex;
+        gap: 20px;
+        width: 100%;
+        max-width: 500px;
+        background-color: #1996F4;
+        // background: linear-gradient(to left, #10C71A, #1EEE2E) padding-box, linear-gradient(to top, #48f045, #2cd22c) border-box;
+        text-decoration: none;
+        border-radius: 34px;
+
+        b {
+          color: white;
+          font-family: "Zen_Dots";
+          font-size: 18px;
+          gap: 20px;
+          width: 100%;
+
+          @include mobile {
+            font-size: 15px;
+
+          }
+        }
+
+        @include mobile {
+          font-size: 12px;
+          gap: 10px;
+          padding: 12px 25px 12px 25px;
+        }
+      }
+
+    }
+  }
+
 }
