--- a/src/scss/loader.scss
+++ b/src/scss/loader.scss
@@ -5,7 +5,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background: #ffa300;
+  background-color: #ffd51d;
+
 }
 
 .progress__wrapper {
