--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -1,9 +1,13 @@
-  @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-  @font-face {
-    font-family: "Zen_Dots";
-    src: url("./font/Zen_Dots/ZenDots-Regular.ttf");
-  }
+@font-face {
+  font-family: "Zen_Dots";
+  src: url("./font/Zen_Dots/ZenDots-Regular.ttf");
+}
+@font-face {
+  font-family: "Poppins";
+  src: url("../scss/font/Poppins/Poppins-Medium.ttf");
+}
 * {
   padding: 0;
   margin: 0;
@@ -19,3 +23,34 @@ body {
   position: relative;
 }
 
+main::before {
+  content: "";
+  position: absolute;
+
+  background: url("../assests/kulki.webp");
+
+  background-size: contain;
+  top: 0px;
+  z-index: -2;
+  height: 100%;
+  width: 100%;
+}
+
+.blue_bc {
+  position: relative;
+  overflow: hidden;
+}
+.blue_bc::before {
+  content: "";
+  position: absolute;
+
+  background: url("../assests/vector33.webp");
+
+  background-size: cover;
+  top: 0px;
+  z-index: -2;
+  height: 100%;
+  width: 100%;
+  background-repeat: repeat-y;
+  background-position: top;
+}
