--- a/src/scss/faq.scss
+++ b/src/scss/faq.scss
@@ -19,16 +19,17 @@
 
     .heading {
       padding-bottom: 25px;
+
       h1 {
         line-height: 100%;
-        font-weight: 300;
-        line-height: 118%;
-        text-transform: uppercase;
-        text-align: center;
-        font-size: clamp(3rem, 7vw, 5rem);
-        color: #fff;
-        font-family: "Letric";
-        text-shadow: 2px 2px #0a0807;
+        color: #FFF;
+        font-family: "Zen Dots";
+        font-size: 40px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 80px;
+        margin-bottom: 30px;
+        margin-left: -50px;
       }
     }
 
@@ -44,13 +45,16 @@
 
       .end {
         order: 2;
+        max-width: 1200px;
+        margin: auto;
+        padding: 20px;
 
         ul {
           list-style: none;
         }
 
-        > div {
-          > div {
+        >div {
+          >div {
             position: relative;
             margin-bottom: 15px;
             padding: 0px 3px;
@@ -63,6 +67,7 @@
             border-radius: 0;
             /* border: 1px solid white; */
             background-color: #151616;
+
             /* box-shadow: inset 0 0 0 2px #b94841; */
             li {
               font-size: 18px;
@@ -89,33 +94,24 @@
             }
           }
         }
+
+
       }
     }
   }
 }
 
-.makeStyles-heading-2 {
-  font-size: 18px !important;
-}
+.answer {
+  display: none;
+  padding: 0px 70px 48px 48px;
 
-.makeStyles-heading-2 {
-  font-size: 0.9375rem;
-  font-weight: 400;
-  font-size: 20px !important;
-  size: 1em 2.5em;
-  color: #fff;
-}
-
-p.MuiTypography-root.MuiTypography-body1 {
-  font-size: 20px !important;
-  color: #dfdfdf;
-  text-transform: capitalize;
-  @include lg {
-    font-size: 20px !important;
-  }
-
-  @include sm {
-    font-size: 18px !important;
+  li {
+    color: #000;
+    font-family: "Poppins";
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
   }
 }
 
