--- a/src/scss/join.scss
+++ b/src/scss/join.scss
@@ -11,32 +11,105 @@
         justify-content: center;
         gap: 50px;
 
-        .heading {
-            h1 {
-                color: #343030;
-                font-size: 48px;
-                font-family: 'font-3';
-                padding: 20px;
-                font-weight: 600;
-                font-style: italic;
-            }
-
-        }
-
-        .content {
+        .content_box {
             display: flex;
-            align-items: center;
-            justify-content: center;
+            flex-direction: column;
+            background: linear-gradient(to left, #ffd71e, #fff18a) padding-box, linear-gradient(to bottom, #ffd71e, #fff18a) border-box;
+            transition: all 1s;
+            border-radius: 34px;
+            border: 3px solid transparent;
+            max-width: 900px;
+            /* margin-inline: auto; */
+            padding: 20px 50px 60px;
             width: 100%;
-            background: white;
-            padding: 12px;
+            align-items: center;
 
-            img {
-                width: 100%;
-                max-width: 900px;
+            .heading {
+                max-width: 600px;
+
+                h1 {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    position: relative;
+                    font-size: 40px;
+                    line-height: 42px;
+                    text-align: center;
+                    padding-top: 85px;
+                    margin-bottom: 20px;
+                    color: #000;
+                    font-weight: 400;
+                    font-family: "Zen_Dots";
+                    font-style: normal;
+                    margin-top: 0;
+
+                    &::before {
+                        content: "";
+                        background-image: url("../assests/tg_1.webp");
+                        background-repeat: no-repeat;
+                        background-size: contain;
+                        display: block;
+                        position: absolute;
+                        width: 90px;
+                        height: 90px;
+
+                        top: -45px;
+                    }
+                }
             }
 
+            .join_btn {
+                display: flex;
+                align-items: center;
+                justify-content: center;
 
+                a {
+
+                    cursor: pointer;
+
+                    button {
+                        color: #000;
+                        font-family: "Zen_Dots";
+                        font-size: 18px;
+                        font-style: normal;
+                        padding: 13px 33px 13px 33px;
+                        background: transparent;
+                        border: 3px solid transparent;
+                        display: inline-block;
+                        position: relative;
+                        /* display: flex; */
+                        /* align-items: center; */
+                        /* justify-content: center; */
+                        display: flex;
+                        gap: 20px;
+                        width: 100%;
+                        max-width: 500px;
+                        background: linear-gradient(to left, #10C71A, #1EEE2E) padding-box, linear-gradient(to top, #48f045, #2cd22c) border-box;
+                        text-decoration: none;
+                        border-radius: 34px;
+
+                        b {
+                            color: #000;
+                            font-family: "Zen_Dots";
+                            font-size: 18px;
+                            gap: 20px;
+                            width: 100%;
+
+                            @include mobile {
+                                font-size: 15px;
+
+                            }
+                        }
+
+                        @include mobile {
+                            font-size: 12px;
+                            gap: 10px;
+                            padding: 12px 25px 12px 25px;
+                        }
+                    }
+
+                }
+            }
         }
     }
 }
