--- a/src/scss/roadmap.scss
+++ b/src/scss/roadmap.scss
@@ -65,4 +65,60 @@
       }
     }
   }
+  .aboutTwo_btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    a {
+
+padding-bottom: 90px;
+      button {
+        color: white;
+        font-family: "Zen_Dots";
+        font-size: 18px;
+        font-style: normal;
+        padding: 13px 33px 13px 33px;
+        background: transparent;
+        border: 3px solid transparent;
+        display: inline-block;
+        position: relative;
+        /* display: flex; */
+        /* align-items: center; */
+        /* justify-content: center; */
+        display: flex;
+        gap: 20px;
+        width: 100%;
+        max-width: 500px;
+        background: linear-gradient(to left, #FD653C, #ED3B1A) padding-box, linear-gradient(to top, #fd653c, #ed3b1a) border-box;
+        text-decoration: none;
+        color: white;
+        position: relative;
+        border-radius: 34px;
+        cursor: pointer;
+&:hover{
+
+}
+        b {
+          color: white;
+          font-family: "Zen_Dots";
+          font-size: 18px;
+          gap: 20px;
+          width: 100%;
+
+          @include mobile {
+            font-size: 15px;
+
+          }
+        }
+
+        @include mobile {
+          font-size: 12px;
+          gap: 10px;
+          padding: 12px 25px 12px 25px;
+        }
+      }
+
+    }
+  }
 }
