--- a/src/scss/upgrade.scss
+++ b/src/scss/upgrade.scss
@@ -26,10 +26,16 @@
                 color: #000;
                 text-align: center;
                 font-family: "Zen_Dots";
-                font-size: 60px;
+                font-size: clamp(10%, 10vw, 60px);
                 font-style: normal;
                 font-weight: 400;
                 line-height: 89.5px;
+
+                @include md {
+                    line-height: normal;
+
+                }
+
             }
         }
 
@@ -62,6 +68,11 @@
             padding-top: 60px;
             padding-bottom: 60px;
 
+            @include md {
+                flex-direction: column;
+                row-gap: 30px;
+            }
+
             .step_box {
                 display: flex;
                 flex-direction: column;
@@ -92,6 +103,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+
             a {
 
 
