--- a/src/scss/banner.scss
+++ b/src/scss/banner.scss
@@ -257,7 +257,9 @@
   width: 100%;
   background: linear-gradient(90deg, #1ABEFA 33.68%, #1974F0 72.86%);
   height: 7rem !important;
-
+@include md{
+  height: 4.5rem !important;
+}
   p {
 
 
@@ -276,4 +278,19 @@
       line-height: 70px;
     }
   }
+}
+
+
+.mar{
+     font-family: "Zen_Dots";
+      color: #FFF !important;
+      text-align: center;
+
+      font-size: 30px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 70px;
+      @include md{
+        font-size: 20px;
+      }
 }
