--- a/src/scss/readMore.scss
+++ b/src/scss/readMore.scss
@@ -22,7 +22,9 @@
                 margin-inline: auto;
                 display: flex;
                 justify-content: center;
-
+                @include mobile{
+                    font-size: 34px;
+                  }
             }
         }
 
