--- a/src/scss/roadmap.scss
+++ b/src/scss/roadmap.scss
@@ -8,6 +8,10 @@
   .heading {
     padding: 70px 20px 0px 20px;
 
+    @include mobile {
+      padding-top: 220px;
+    }
+
     h1 {
       color: #fff;
       font-family: "Zen_Dots";
@@ -17,6 +21,7 @@
       line-height: 80px;
     }
   }
+
   .container {
     max-width: 1200px;
     margin: auto;
@@ -25,8 +30,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
     .roadmap__grid {
       width: 100%;
+
       h2 {
         display: flex;
         align-items: center;
@@ -38,19 +45,23 @@
         margin-top: 31px;
         margin-bottom: 15px;
         position: relative;
+
         img {
           width: 100%;
           max-width: 50px;
         }
       }
-      .item{
-        ul{
-              padding-left: 50px;
-              @include md{
-              padding-left: 15px;
 
-              }
-          li{
+      .item {
+        ul {
+          padding-left: 50px;
+
+          @include md {
+            padding-left: 15px;
+
+          }
+
+          li {
             color: #FFF;
             font-family: "Poppins";
             font-size: 14px;
@@ -65,6 +76,7 @@
       }
     }
   }
+
   .aboutTwo_btn {
     display: flex;
     align-items: center;
@@ -72,7 +84,8 @@
 
     a {
 
-padding-bottom: 90px;
+      padding-bottom: 90px;
+
       button {
         color: white;
         font-family: "Zen_Dots";
@@ -96,9 +109,9 @@ padding-bottom: 90px;
         position: relative;
         border-radius: 34px;
         cursor: pointer;
-&:hover{
 
-}
+        &:hover {}
+
         b {
           color: white;
           font-family: "Zen_Dots";
