--- a/src/scss/token.scss
+++ b/src/scss/token.scss
@@ -88,7 +88,8 @@
             img {
                 max-width: 500px;
                 object-fit: cover;
-                padding: 40px;
+                /* padding: 40px; */
+                width: 100%;
             }
         }
     }
