--- a/src/scss/roadmap.scss
+++ b/src/scss/roadmap.scss
@@ -83,34 +83,27 @@
     justify-content: center;
 
     a {
-
-      padding-bottom: 90px;
+      cursor: pointer;
 
       button {
-        color: white;
+        color: #000;
         font-family: "Zen_Dots";
         font-size: 18px;
         font-style: normal;
-        padding: 13px 33px 13px 33px;
+        padding: 8px 33px 8px 33px;
         background: transparent;
         border: 3px solid transparent;
         display: inline-block;
         position: relative;
-        /* display: flex; */
-        /* align-items: center; */
-        /* justify-content: center; */
         display: flex;
+        align-items: center;
+        justify-content: center;
         gap: 20px;
         width: 100%;
         max-width: 500px;
         background: linear-gradient(to left, #FD653C, #ED3B1A) padding-box, linear-gradient(to top, #fd653c, #ed3b1a) border-box;
         text-decoration: none;
-        color: white;
-        position: relative;
         border-radius: 34px;
-        cursor: pointer;
-
-        &:hover {}
 
         b {
           color: white;
@@ -122,6 +115,14 @@
           @include mobile {
             font-size: 15px;
 
+          }
+        }
+
+        .span {
+          img {
+            width: 100%;
+            height: 100%;
+            max-width: 45px;
           }
         }
 
