--- a/src/scss/utility.scss
+++ b/src/scss/utility.scss
@@ -108,50 +108,57 @@
 
             .about_btn {
                 a {
-
-
+                    cursor: pointer;
+          
                     button {
-                        color: #000;
+                      color: #000;
+                      font-family: "Zen_Dots";
+                      font-size: 18px;
+                      font-style: normal;
+                      padding: 8px 33px 8px 33px;
+                      background: transparent;
+                      border: 3px solid transparent;
+                      display: inline-block;
+                      position: relative;
+                      display: flex;
+                      align-items: center;
+                      justify-content: center;
+                      gap: 20px;
+                      width: 100%;
+                      max-width: 500px;
+                      background: linear-gradient(to left, #FD653C, #ED3B1A) padding-box, linear-gradient(to top, #fd653c, #ed3b1a) border-box;
+                      text-decoration: none;
+                      border-radius: 34px;
+          
+                      b {
+                        color: white;
                         font-family: "Zen_Dots";
                         font-size: 18px;
-                        font-style: normal;
-                        padding: 13px 33px 13px 33px;
-                        background: transparent;
-                        border: 3px solid transparent;
-                        display: inline-block;
-                        position: relative;
-                        /* display: flex; */
-                        /* align-items: center; */
-                        /* justify-content: center; */
-                        display: flex;
                         gap: 20px;
                         width: 100%;
-                        max-width: 500px;
-                        background: linear-gradient(to left, #10C71A, #1EEE2E) padding-box, linear-gradient(to top, #48f045, #2cd22c) border-box;
-                        text-decoration: none;
-                        border-radius: 34px;
-
-                        b {
-                            color: #000;
-                            font-family: "Zen_Dots";
-                            font-size: 18px;
-                            gap: 20px;
-                            width: 100%;
-
-                            @include mobile {
-                                font-size: 15px;
-
-                            }
-                        }
-
+          
                         @include mobile {
-                            font-size: 12px;
-                            gap: 10px;
-                            padding: 12px 25px 12px 25px;
+                          font-size: 15px;
+          
                         }
+                      }
+          
+                      .span {
+                        img {
+                          width: 100%;
+                          height: 100%;
+                          max-width: 45px;
+                        }
+                      }
+          
+                      @include mobile {
+                        font-size: 12px;
+                        gap: 10px;
+                        padding: 12px 25px 12px 25px;
+                      }
                     }
-
-                }
+          
+                  }
             }
         }
 
