--- a/src/scss/roadmap.scss
+++ b/src/scss/roadmap.scss
@@ -32,14 +32,20 @@
     justify-content: center;
 
     .roadmap__grid {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
       width: 100%;
-
+      figure {
+        img {
+          width: 100%;
+        }
+      }
       h2 {
         display: flex;
         align-items: center;
         justify-content: start;
         gap: 10px;
-        color: #FFF;
+        color: #fff;
         font-size: 16px;
         line-height: 24px;
         margin-top: 31px;
@@ -58,11 +64,10 @@
 
           @include md {
             padding-left: 15px;
-
           }
 
           li {
-            color: #FFF;
+            color: #fff;
             font-family: "Poppins";
             font-size: 14px;
             font-style: normal;
@@ -101,7 +106,8 @@
         gap: 20px;
         width: 100%;
         max-width: 500px;
-        background: linear-gradient(to left, #FD653C, #ED3B1A) padding-box, linear-gradient(to top, #fd653c, #ed3b1a) border-box;
+        background: linear-gradient(to left, #fd653c, #ed3b1a) padding-box,
+          linear-gradient(to top, #fd653c, #ed3b1a) border-box;
         text-decoration: none;
         border-radius: 34px;
 
@@ -114,7 +120,6 @@
 
           @include mobile {
             font-size: 15px;
-
           }
         }
 
@@ -132,7 +137,6 @@
           padding: 12px 25px 12px 25px;
         }
       }
-
     }
   }
 }
