--- a/src/scss/utility.scss
+++ b/src/scss/utility.scss
@@ -2,207 +2,201 @@
 @import "./media.scss";
 
 #utility {
-    position: relative;
-    z-index: 1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+  position: relative;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 
-    .top_content {
-        max-width: 1200px;
-        margin: auto;
-        padding: 20px;
+  .top_content {
+    max-width: 1200px;
+    margin: auto;
+    padding: 20px;
 
-        h1 {
-            color: #000;
-            font-weight: 400;
-            line-height: 80px;
-            font-family: "Zen_Dots";
-            font-style: normal;
-            margin-top: 0;
-            line-height: 50px;
-            text-align: center;
-            font-size: 40px;
-            position: relative;
-        }
-
-        p {
-            color: #000;
-            font-family: "Poppins";
-            font-size: 16px;
-            font-style: normal;
-            font-weight: 400;
-            line-height: normal;
-            margin-top: 25px;
-            margin-bottom: 25px;
-            text-align: center;
-
-            @include md {
-                letter-spacing: 1.2px;
-            }
-        }
+    h1 {
+      color: #000;
+      font-weight: 400;
+      line-height: 80px;
+      font-family: "Zen_Dots";
+      font-style: normal;
+      margin-top: 0;
+      line-height: 50px;
+      text-align: center;
+      font-size: 40px;
+      position: relative;
     }
 
-    .container {
-        max-width: 1200px;
-        margin: auto;
+    p {
+      color: #000;
+      font-family: "Poppins";
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
+      margin-top: 25px;
+      margin-bottom: 25px;
+      text-align: center;
+
+      @include md {
+        letter-spacing: 1.2px;
+      }
+    }
+  }
+
+  .container {
+    max-width: 1200px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    z-index: 4;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 10px 20px 90px 20px;
+
+    @include md {
+      display: flex;
+      flex-direction: column-reverse;
+    }
+
+    .content {
+      display: flex;
+      flex-direction: column;
+      align-items: start;
+      justify-content: center;
+
+      .heading {
+        h1 {
+          color: #000;
+          font-weight: 400;
+          line-height: 80px;
+          font-family: "Zen_Dots";
+          font-style: normal;
+          margin-top: 0;
+          line-height: 50px;
+          max-width: 483px;
+          font-size: 40px;
+          position: relative;
+        }
+      }
+
+      .para {
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
-        z-index: 4;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        padding: 10px 20px 90px 20px;
+        justify-content: start;
+        gap: 40px;
 
-      
-        @include md {
-            display: flex;
-            flex-direction: column-reverse;
+        p {
+          color: #000;
+          font-family: "Poppins";
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: normal;
+          margin-top: 25px;
+          margin-bottom: 25px;
+
+          @include md {
+            letter-spacing: 1.2px;
+          }
         }
+      }
 
-        .content {
-            display: flex;
-            flex-direction: column;
-            align-items: start;
-            justify-content: center;
+      .about_btn {
+        a {
+          cursor: pointer;
 
-            .heading {
-                h1 {
-                    color: #000;
-                    font-weight: 400;
-                    line-height: 80px;
-                    font-family: "Zen_Dots";
-                    font-style: normal;
-                    margin-top: 0;
-                    line-height: 50px;
-                    max-width: 483px;
-                    font-size: 40px;
-                    position: relative;
-                }
-            }
-
-            .para {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: start;
-                gap: 40px;
-
-                p {
-                    color: #000;
-                    font-family: "Poppins";
-                    font-size: 16px;
-                    font-style: normal;
-                    font-weight: 400;
-                    line-height: normal;
-                    margin-top: 25px;
-                    margin-bottom: 25px;
-
-                    @include md {
-                        letter-spacing: 1.2px;
-                    }
-                }
-            }
-
-            .about_btn {
-                a {
-                    cursor: pointer;
-          
-                    button {
-                      color: #000;
-                      font-family: "Zen_Dots";
-                      font-size: 18px;
-                      font-style: normal;
-                      padding: 8px 33px 8px 33px;
-                      background: transparent;
-                      border: 3px solid transparent;
-                      display: inline-block;
-                      position: relative;
-                      display: flex;
-                      align-items: center;
-                      justify-content: center;
-                      gap: 20px;
-                      width: 100%;
-                      max-width: 500px;
-                      background: linear-gradient(to left, #FD653C, #ED3B1A) padding-box, linear-gradient(to top, #fd653c, #ed3b1a) border-box;
-                      text-decoration: none;
-                      border-radius: 34px;
-          
-                      b {
-                        color: white;
-                        font-family: "Zen_Dots";
-                        font-size: 18px;
-                        gap: 20px;
-                        width: 100%;
-          
-                        @include mobile {
-                          font-size: 15px;
-          
-                        }
-                      }
-          
-                      .span {
-                        img {
-                          width: 100%;
-                          height: 100%;
-                          max-width: 45px;
-                        }
-                      }
-          
-                      @include mobile {
-                        font-size: 12px;
-                        gap: 10px;
-                        padding: 12px 25px 12px 25px;
-                      }
-                    }
-          
-                  }
-            }
-        }
-
-        .img {
-            display: flex;
-            align-items: center;
-            justify-content: center;
+          button {
+            color: #000;
+            font-family: "Zen_Dots";
+            font-size: 18px;
+            font-style: normal;
+            padding: 8px 33px 8px 33px;
+            background: transparent;
+            border: 3px solid transparent;
+            display: inline-block;
             position: relative;
-            height: 500px;
-
-            @include sm {
-                height: auto;
-            }
-
-
-
-            @include md {
-                order: 2;
-            }
-
-            img {
-                max-width: 500px;
-                object-fit: cover;
-                padding: 40px;
-
-                @include sm {
-                    width: 100%;
-                }
-            }
-        }
-
-        .about_bts {
             display: flex;
             align-items: center;
             justify-content: center;
-            flex-direction: column;
-            row-gap: 15px;
+            gap: 20px;
+            width: 100%;
+            max-width: 500px;
+            background: linear-gradient(to left, #fd653c, #ed3b1a) padding-box,
+              linear-gradient(to top, #fd653c, #ed3b1a) border-box;
+            text-decoration: none;
+            border-radius: 34px;
 
-            input {
-                input[type="date" i] {
+            b {
+              color: white;
+              font-family: "Zen_Dots";
+              font-size: 18px;
+              gap: 20px;
+              width: 100%;
 
-                    display: none;
-                }
+              @include mobile {
+                font-size: 15px;
+              }
             }
+
+            .span {
+              img {
+                width: 100%;
+                height: 100%;
+                max-width: 45px;
+              }
+            }
+
+            @include mobile {
+              font-size: 12px;
+              gap: 10px;
+              padding: 12px 25px 12px 25px;
+            }
+          }
         }
+      }
     }
+
+    .img {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: relative;
+      height: 500px;
+
+      @include sm {
+        height: auto;
+      }
+
+      @include md {
+        order: 2;
+      }
+
+      img {
+        max-width: 500px;
+        object-fit: cover;
+
+        @include sm {
+          width: 100%;
+        }
+      }
+    }
+
+    .about_bts {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      row-gap: 15px;
+
+      input {
+        input[type="date" i] {
+          display: none;
+        }
+      }
+    }
+  }
 }
